19. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- q3table replaced by qtablewidget

18. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- q3popmenu with qmenu replaced at mainwidget, guibase, borrowdialog
	- q3cstring removed
	- q3textbrowser replaced by qtextbrowser
	- display content file pattern info if deabug info is enabled
	- q3frame replaced by qframe
	- q3whatsthis removed
	- q3strlist replaced by qstringlist

17. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- handle files larger than 1tb fixed
	- use double instead float internally
	- tb size unit on find dialog added
	- searching file size on finddialog fixed
	- selreadable dialog reworked
	- config dialog reworked
	- exclude file support added (regex, filename)
	- display busy cursor on open catalog from history menu
	- applying missing db settings on rescan event added
	- applying missing db settings on open hitstory event added
	- find entries to new find menu entry moved
	- use qstring instead of char string for compare at pos() on pos dialog

09. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- option for display file content with external viewer added (#982070)
	- display result progress/count on find dialog table label added (#3496359)
	- use qpushbutton instead of painted button for cancel at progressdialog
	- cancel loading catalog fixed
	- cancel searching fixed
	- display more error messages on console
	- extension column at finddialog added (#3496363)
	- crash at closing file duplicates dialog fixed
	- disable menubar and toolbar if finddialog is open
	- calculate size from nodes fixed

07. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- storing adddialog size and position added
	- option for thumbnail size added
	- save thumbnail size fixed
	- option for specify thumbnail file extensions added
	- save last selected dir on adddialog fixed
	- scroll to last folder in tree on adddialog init
	- try to scroll 2 items of current folder up in tree on adddialog init for better view
